--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </h3>
 
 
-            <IMG SRC="https://www.google.com/url?sa=i&url=https%3A%2F%2Fonline.ysu.edu%2Fcalendar.aspx&psig=AOvVaw3USHI-7W3TMf84RHbdvYXS&ust=1596314850169000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCICV_q-u-OoCFQAAAAAdAAAAABAc" ALT="some text" WIDTH=300 HEIGHT=200>
+            <IMG SRC="images/ysulogo.jpg" ALT="some text" WIDTH=300 HEIGHT=200>
             <h6>This web link isn't affiliated to Youngstown State University.</h6>
 
             <h6> Connect with me! </h6>
