--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <h3>
               <a href="https://ecs.ysu.edu/ECS.html">Check your Electorinic Curriculum Sheet and see what courses you need to gradute!</a>
             </h3>
-            <h3>
+            <h3> 
               <a href="https://ysu.edu/campus-recreation">Campus Rec!</a>
             </h3>
 
 
-            <IMG SRC="images/ysulogo.jpg" ALT="some text" WIDTH=300 HEIGHT=200>
+            <img src="images/ysulogo.jpg" ALT="YSU Logo" WIDTH=300 HEIGHT=200>
             <h6>This web link isn't affiliated to Youngstown State University.</h6>
 
             <h6> Connect with me! </h6>
