--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          }
          p {
            font-family: 'Nobile', Helvetica, Arial, sans-serif;
+           color: #7CFC00;
         }
       </style>
         <title>
@@ -71,7 +72,7 @@
 
 
 
-           <p style="color:blue">
+           <p>
               I am Aniket, your RA! <br />
               I made this simple website just to bring everything together so you don't have to work to find important information. <br />
               Please let me know if you want me to add something. My YSU email - aksingh01@student.ysu.edu <br />
