--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
       <style>
              body {
                 background-image: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
@@ -26,6 +30,12 @@
                 max-width:  100% ;
                 height: 150px ;
             }
+            div.absolute {
+              position: absolute;
+              bottom: 20px;
+              width: 50%;
+              border: 3px solid #8AC007;
+            }
             a:link {
               color: red;
             }
@@ -44,6 +54,8 @@
             a:active {
               color: blue;
             }
+
+
       </style>
         <title>
             allYSUNeeds
@@ -134,9 +146,16 @@
             <h5>This web link isn't affiliated to Youngstown State University.</h5>
 
             <h5> Connect with me! </h5>
-            <a href="https://www.instagram.com/aniiiiii_ket/">Insta: @aniiiiii_ket!</a>
-            <br />
-            <a href="https://www.facebook.com/aniketacous">Facebook: @aniketacous!</a>
+            <div class="rightbottom">
+              <ul class="socialmediaicons">
+                <a href="https://www.facebook.com/aniketacous" target="_blank"><i class="fa fa-facebook" style="font-size:24px" ></i></a>
+                  &ensp;
+                <a href="https://www.instagram.com/aniiiiii_ket/" target="_blank"><i class="fa fa-instagram" style="font-size:24px" > </i></a>
+                  &ensp;
+                <a href="https://www.linkedin.com/in/singh-k-aniket/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px" ></i></a>
+
+                </ul>
+              </div>
 
 
 
