--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <style>
-             body {
-                background-image: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
+            
+             html {
+                  background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg) no-repeat center center fixed #000;
+                  -webkit-background-size: cover;
+                  -moz-background-size: cover;
+                  -o-background-size: cover;
+                  background-size: cover;
              }
              h1 {
                color: red;
@@ -30,6 +35,7 @@
                 max-width:  100% ;
                 height: 150px ;
             }
+
             div.absolute {
               position: absolute;
               bottom: 20px;
