--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <style>
-            
+
              html {
                   background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg) no-repeat center center fixed #000;
-                  -webkit-background-size: cover;
-                  -moz-background-size: cover;
-                  -o-background-size: cover;
-                  background-size: cover;
+                  background-repeat:no-repeat;
+                  background-size:contain;
+                  background-position:center;
              }
              h1 {
                color: red;
