--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
              html {
                   background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg) no-repeat center center fixed #000;
-                  background-repeat:no-repeat;
-                  background-size:contain;
-                  background-position:center;
+                  background-size: 100%;
+
              }
              h1 {
                color: red;
