--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
       <style>
 
@@ -157,6 +157,9 @@
                 <a href="https://www.instagram.com/aniiiiii_ket/" target="_blank"><i class="fa fa-instagram" style="font-size:24px" > </i></a>
                   &ensp;
                 <a href="https://www.linkedin.com/in/singh-k-aniket/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px" ></i></a>
+                &ensp;
+                <a href="https://github.com/singhaniket98" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a>
+                &ensp;&ensp;&ensp;
 
                 </ul>
               </div>
