--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
       <style>
 
              html {
-                  background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg) no-repeat center center fixed #000;
+                  background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
                   background-size: 100%;
-
              }
              h1 {
                color: red;
