--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
       <style>
 
-             html {
-                  background: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
-                  background-size: 100%;
+             
+             body {
+               background-image: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
+               background-size: cover;
+               background-attachment: fixed;
+               background-repeat: no-repeat;
+               background-position: center;
              }
              h1 {
                color: red;
