--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             WELCOME CAFARO RESIDENTS!
           </h1>
             <h4>
+              <a href="https://cm.maxient.com/reportingform.php?YoungstownStateUniv&layout_id=18">Student Reporting Form</a>
+            </h4>
+            <h4>
               <a href="https://ysu.edu/academics">Academics!</a>
             </h4>
             <h4>
@@ -84,9 +87,6 @@
             </h4>
             <h4>
               <a href = "https://cms.ysu.edu/mathematics-assistance-center/math-assistance-center"> YSU Math Assistance Center - GET MATH HELP!</a>
-            </h4>
-            <h4>
-              <a href = "https://ysu.edu/student-counseling-services"> YSU Counseling Services</a>
             </h4>
             <h4>
               <a href = "https://ysu.edu/writing-center"> YSU Writing Center</a>
