--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             WELCOME CAFARO RESIDENTS!
           </h1>
             <h4>
-              <a href="https://cm.maxient.com/reportingform.php?YoungstownStateUniv&layout_id=18">Student Reporting Form</a>
+              <a href="https://cm.maxient.com/reportingform.php?YoungstownStateUniv&layout_id=18">Student COVID Reporting Form</a>
             </h4>
             <h4>
               <a href="https://ysu.edu/academics">Academics!</a>
