--- a/index.html
+++ b/index.html
@@ -1,174 +1,257 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<head>
+<meta charset="utf-8">
+<title>Aniket Singh</title>
+<meta http-equiv="X-UA-Compatible" content="IE-edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--title-icon--------->
+<link rel="shortcut icon" href="images/icon.png">
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<!--using FontAwesome---------------->
+<script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+	<!--main------------------------>
+	<section id="main">
+	<!--navigation-------------------------------->
+	<nav>
+	<!--logo--->
+	<a href="#" class="logo">LOGO</a>
+	<!--menu--------->
+	<div class="toggle"></div>
+	<ul class="menu">
+	<li class="active"><a href="#main" >Home</a></li>
+	<li><a href="#about">About</a></li>
+	<li><a href="#projects">Projects</a></li>
+	<li><a href="#skills">skills</a></li>
+	<li><a href="#contact-form">Contact</a></li>
+	<li><a href="res.pdf" data-target="res.pdf">Resume </a></li>
+	</ul>
+	<!--language-->
+	<a href="#" class="lang">En</a>
+	</nav>
+	<!--name--------------------------->
+
+	<div class="name">
+	<!--hello------->
+	<p> <font color="#111111"> Hello, </font></p>
+	<!--name--->
+	<h1>I'm <font color="#00BFFF">Aniket</font> Singh</h1>
+	<!--details--------------->
+	<p class="details"> <font color="#111111"> Welcome to my webpage. I am a senior at Youngstown State University. I am majoring in Computer Science, with a specialization in Data Analysis. Check out my resume, to know more about my academics. </font> </p>
+	<!--cv button-------------------->
+	<!---
+	<a href="#" class="cv-btn">Download CV</a>--->
 
 
-      <style>
+	</div>
+		<!--down arrow-------------->
+	<div class="black-line" ></div>
+	<!--social---------------->
+	<div class="social">
+	<a href = "https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=aniketkashyyap@gmail.com"> <i class="fa fa-envelope"></i> </a>
+	<a href = "https://www.linkedin.com/in/singh-k-aniket/"><i class="fa fa-linkedin-square"></i></a>
+	<a href ="https://github.com/singhaniket98"><i class="fa fa-github"></i></a>
+	<a href="https://www.instagram.com/aniiiiii_ket/"><i class="fab fa-instagram"></i></a>
+	</div>
 
-             
-             body {
-               background-image: url(https://wallpaperplay.com/walls/full/6/3/8/121401.jpg);
-               background-size: cover;
-               background-attachment: fixed;
-               background-repeat: no-repeat;
-               background-position: center;
-             }
-             h1 {
-               color: red;
-               font-family: 'Nobile', Helvetica, Arial, sans-serif;
-             }
-             h4 {
-               color: white;
-               font-family: 'Nobile', Helvetica, Arial, sans-serif;
-             }
-             h5 {
-               color: red;
-             }
-             p {
-               font-family: 'Nobile', Helvetica, Arial, sans-serif;
-               color: #DC143C;
-            }
-            img {
-                width: 150px ;
-                max-width:  100% ;
-                height: 150px ;
-            }
-
-            div.absolute {
-              position: absolute;
-              bottom: 20px;
-              width: 50%;
-              border: 3px solid #8AC007;
-            }
-            a:link {
-              color: red;
-            }
-
-            /* visited link */
-            a:visited {
-              color: green;
-            }
-
-            /* mouse over link */
-            a:hover {
-              color: hotpink;
-            }
-
-            /* selected link */
-            a:active {
-              color: blue;
-            }
+	</section>
+	<!--about----------------------->
+		<section id="about">
+	<!--text---------------------->
+	<div class="about-text">
+	<h1>About Me</h1>
+	<h2>Student - Computer Science</h2>
+	<p> I am an international student from Nepal. Currently a senior at Youngstown State University. I will be graduating May 2021. I love to code and solve problems. My area of interest is data analysis, machine learning, and problem solving.</p>
+	<p> I work as a Resident Assistant at Cafaro House, Residence Life. I am also currently the president for International Student Organization. </p>
+	<p> Other than coding, I have several hobbies such as stock trading, photography, weight lifting, and playing guitar. </p>
+	</div>
+	<!--about-model----------------->
+	<div class="about-model">
+	<!--img src="images/about-model.png" alt="model"/-->
+	</div>
 
 
-      </style>
-        <title>
-            allYSUNeeds
-        </title>
-    </head>
-    <body>
-      <center>
-          <h1>
-            WELCOME CAFARO RESIDENTS!
-          </h1>
-            <h4>
-              <a href="https://cm.maxient.com/reportingform.php?YoungstownStateUniv&layout_id=18">Student COVID Reporting Form</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/academics">Academics!</a>
-            </h4>
-            <h4>
-              <a href = "https://ysu.edu/student-counseling-services"> YSU Counseling Services!</a>
-            </h4>
-            <h4>
-              <a href = "https://ysu.edu/center-for-student-progress"> Center for Student Progress - GET FREE HELP!</a>
-            </h4>
-            <h4>
-              <a href = "https://cms.ysu.edu/mathematics-assistance-center/math-assistance-center"> YSU Math Assistance Center - GET MATH HELP!</a>
-            </h4>
-            <h4>
-              <a href = "https://ysu.edu/writing-center"> YSU Writing Center</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/greek-life">Greek Life</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/center-for-student-progress/disability-services">Disability Services</a>
-            </h4>
-            <h4>
-              <a href="https://ecs.ysu.edu/ECS.html">Check your Electorinic Curriculum Sheet and see what courses you need to gradute.</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/campus-recreation">Campus Rec</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/coronavirus-information">COVID-19 Update</a>
-            </h4>
-            <h4>
-              <a href="http://cfweb.cc.ysu.edu/finaid/scholar/est_scholar.cfm">YSU Scholarships Application</a>
-            </h4>
-            <h4>
-              <a href="https://cfweb.cc.ysu.edu/finaid/ysuf/ysuf_application.cfm">YSU Foundation Scholarships Application</a>
-            </h4>
-            <h4>
-              <a href="https://jobs.ysu.edu/postings/search?query=&query_v0_posted_at_date=&1237%5B%5D=5&commit=Search">Apply Jobs On Campus</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/kilcawley-center/kilcawley-center-job-descriptions">Apply Kilcawley Center Jobs</a>
-            </h4>
-            <h4>
-              <a href="https://dineoncampus.com/ysu/job-opportunities"> Apply for jobs at Food services on campus</a>
-            </h4>
-            <h4>
-              <a href="https://ysuprod.sharepoint.com/sites/HonorsStudents">Honors College Portal</a>
-            </h4>
-            <h4>
-              <a href="https://ysu.edu/student-activities/registered-student-organizations">Find Student Organizations to get more involved on campus</a>
-            </h4>
-            <h4>
-              <a href="http://maag.ysu.edu/">Maag Library</a>
-            </h4>
-            <h4>
-              <a href="https://maag.guides.ysu.edu/az.php">Maag Research Databases</a>
-            </h4>
-            <h4>
-              <a href="http://olc1.ohiolink.edu/search/">Ohio Link</a>
-            </h4>
+	</section>
+	<!--Projects-------------------->
+	<section id="projects">
+	<!--heading-------------->
+	<div class="s-heading">
+	<h1>Projects</h1>
+	<p>Here are some of my projects.</p>
+	</div>
+	<!--services-box-container--------->
+	<div class="b-container">
+	<!--box-1---------------->
+	<div class="s-box">
+	<!--img------------->
+	<div class="s-b-img">
+		<!--type----------->
+		<div class="s-type">ext2 Image Scanner </div>
+		<!--name------->
+		<img src="images/virtual1.png">
+	</div>
+	<!--text----------------->
+	<div class="s-b-text">
+	<a href="https://github.com/singhaniket98/OS-TERM-PROJECT">Programs that copy files into and out of a VirtualBox VDI file containing a Linux ext2 filesystem.</a>
+	</div>
+	</div>
+		<!--box-2---------------->
+	<div class="s-box">
+	<!--img------------->
+	<div class="s-b-img">
+	<!--type----------->
+		<div class="s-type">Intelligent Agent</div>
+		<!--name------->
+		<img src="images/ai.png">
+	</div>
+	<!--text----------------->
+	<div class="s-b-text">
+	<a href="https://github.com/singhaniket98/NavMeshPathFinding">Project on path finding using NavMesh in unity. NavMesh agents finds shortest path and uses some game design techniques.</a>
+	</div>
+	</div>
+		<!--box-3---------------->
+	<div class="s-box">
+	<!--img------------->
+	<div class="s-b-img">
+		<!--type----------->
+		<div class="s-type">Maze Solver</div>
+		<!--name------->
+		<img src="images/maze.png">
+	</div>
+	<!--text----------------->
+	<div class="s-b-text">
+	<a href="https://github.com/singhaniket98/MazePathFinding_C-">PathFinding algorithm to solve a maze. The maze can be customized up to 50x50. New maze with each compilation and generates solution with dead ends.</a>
+	</div>
+	</div>
+	<!--box-4---------------->
+
+	</div>
+	</section>
+	<!--portfolio------------------->
+	<section id="skills">
+	<!--heading----------->
+	<h1 class="p-headind">Skills</h1>
+	<!--portfolio-container------------>
+	<div class="p-container">
+	<!--portfolio-box-1-------->
+	<div class="p-box">
+	<!--text--------->
+	<div class="overlay-text">
+	<h1>Python</h1>
+	<p>Advanced</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/pythonS.jpg">
+
+	</div>
+	<!--portfolio-box-2-------->
+	<div class="p-box">
+		<!--text--------->
+	<div class="overlay-text">
+	<h1>C++</h1>
+	<p>Advanced</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/cpp.jpg">
+	</div>
+	<!--portfolio-box-3-------->
+	<div class="p-box">
+	<!--text--------->
+	<div class="overlay-text">
+	<h1>JavaScript</h1>
+	<p>Advanced</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/javaS.png">
+	</div>
+	<!--portfolio-box-4-------->
+	<div class="p-box">
+	<!--text--------->
+	<div class="overlay-text">
+	<h1>Sas</h1>
+	<p>Advanced</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/sas.png">
+	</div>
+	<!--portfolio-box-5-------->
+	<div class="p-box">
+	<!--text--------->
+	<div class="overlay-text">
+	<h1>R </h1>
+	<p>Intermediate</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/r.png">
+	</div>
+	<!--portfolio-box-6-------->
+	<div class="p-box">
+	<!--text--------->
+	<div class="overlay-text">
+	<h1>Angular</h1>
+	<p>Intermediate</p>
+	</div>
+	<!--bg-img------------->
+	<img src="images/angular.png">
+	</div>
+
+	</div>
+	</section>
+	<!--Contact-btn------------------>
+	<section id="contact-btn">
+	<!--heading-------------->
+	<h1 class="c-b-heading">Contact Me</h1>
+
+	</section>
+	<!--contact-form------------------->
+	<section id="contact-form">
+	<form>
+	<!--left--------------------------------------->
+	<div class="contact-left">
+	<h1 class="c-l-heading"><font style="border-bottom: 3px solid #1ED98B;">Your Info</font> </h1>
+	<!--name-------->
+	<div class="f-name">
+	<font >Name</font>
+	<input type="text" placeholder="Full Name"/>
+	</div>
+	<!--email-------->
+	<div class="f-email">
+	<font >Email</font>
+	<input type="email" placeholder="Example@gmail.com"/>
+	</div>
+	</div>
+	<!--right------------------------------------------->
+	<div class="contact-right">
+	<!--message-------->
+	<div class="message">
+	<font >Message</font>
+	<textarea name="message" rows="5" cols="20" placeholder="Write Message..."></textarea>
+	</div>
+	<!--submit-btn------------>
+	<button>submit</button>
+	</div>
+
+	</form>
+
+	</section>
+
+	<script type="text/javascript" src="js/JQuery3.3.1.js"></script>
+	<script type="text/javascript">
+
+		  /*Responsive Navigation*/
+	  $(document).ready(function(){
+	 $('.toggle').click(function(){
+		 $('.toggle').toggleClass('active')
+
+		 $('nav ul').toggleClass('active-menu')
 
 
+	 })
+ });
 
-
-
-           <p>
-              I am Aniket, your RA! <br />
-              I made this simple website just to bring everything together so you don't have to work to find important information. <br />
-              Please let me know if you want me to add something. My YSU email - aksingh01@student.ysu.edu <br />
-              Sorry for a simple website, I am lazy. <br />
-              I do not save any information, all the links just direct you to the YSU website. <br />
-            </p>
-
-            <img src="images/ysulogo.jpg" ALT="YSU Logo" WIDTH=150 HEIGHT=150>
-            <h5>This web link isn't affiliated to Youngstown State University.</h5>
-
-            <h5> Connect with me! </h5>
-            <div class="rightbottom">
-              <ul class="socialmediaicons">
-                <a href="https://www.facebook.com/aniketacous" target="_blank"><i class="fa fa-facebook" style="font-size:24px" ></i></a>
-                  &ensp;
-                <a href="https://www.instagram.com/aniiiiii_ket/" target="_blank"><i class="fa fa-instagram" style="font-size:24px" > </i></a>
-                  &ensp;
-                <a href="https://www.linkedin.com/in/singh-k-aniket/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px" ></i></a>
-                &ensp;
-                <a href="https://github.com/singhaniket98" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a>
-                &ensp;&ensp;&ensp;
-
-                </ul>
-              </div>
-
-
-
-</center>
-    </body>
+	</script>
+</body>
 </html>
