--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!--navigation-------------------------------->
 	<nav>
 	<!--logo--->
-	<a href="#" class="logo">LOGO</a>
+	<a href="#" class="logo">ANIKET SINGH</a>
 	<!--menu--------->
 	<div class="toggle"></div>
 	<ul class="menu">
