--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<div class="black-line" ></div>
 	<!--social---------------->
 	<div class="social">
-	<a href = "https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=aniketkashyyap@gmail.com"> <i class="fa fa-envelope"></i> </a>
-	<a href = "https://www.linkedin.com/in/singh-k-aniket/"><i class="fa fa-linkedin-square"></i></a>
-	<a href ="https://github.com/singhaniket98"><i class="fa fa-github"></i></a>
-	<a href="https://www.instagram.com/aniiiiii_ket/"><i class="fab fa-instagram"></i></a>
+	<a href = "https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=aniketkashyyap@gmail.com"> <i class="fa fa-envelope" style="font-size:28px"></i> </a>
+	<a href = "https://www.linkedin.com/in/singh-k-aniket/"><i class="fa fa-linkedin-square" style="font-size:28px"></i></a>
+	<a href ="https://github.com/singhaniket98"><i class="fa fa-github" style="font-size:28px"></i></a>
+	<a href="https://www.instagram.com/aniiiiii_ket/"><i class="fab fa-instagram" style="font-size: 28px"></i></a>
 	</div>
 
 	</section>
