--- a/index.html
+++ b/index.html
@@ -201,42 +201,17 @@
 	</div>
 	</section>
 	<!--Contact-btn------------------>
+
 	<section id="contact-btn">
 	<!--heading-------------->
 	<h1 class="c-b-heading">Contact Me</h1>
+	<h1 class="c-b-heading"><i class="fa fa-phone" style="font-size:30px"></i> +(330) 891-7764 </h1>
+	<h1 class="c-b-heading"><i class="fa fa-envelope" style="font-size:30px"></i> aksingh01@student.ysu.edu </h1>
+	
+
 
 	</section>
-	<!--contact-form------------------->
-	<section id="contact-form">
-	<form>
-	<!--left--------------------------------------->
-	<div class="contact-left">
-	<h1 class="c-l-heading"><font style="border-bottom: 3px solid #1ED98B;">Your Info</font> </h1>
-	<!--name-------->
-	<div class="f-name">
-	<font >Name</font>
-	<input type="text" placeholder="Full Name"/>
-	</div>
-	<!--email-------->
-	<div class="f-email">
-	<font >Email</font>
-	<input type="email" placeholder="Example@gmail.com"/>
-	</div>
-	</div>
-	<!--right------------------------------------------->
-	<div class="contact-right">
-	<!--message-------->
-	<div class="message">
-	<font >Message</font>
-	<textarea name="message" rows="5" cols="20" placeholder="Write Message..."></textarea>
-	</div>
-	<!--submit-btn------------>
-	<button>submit</button>
-	</div>
 
-	</form>
-
-	</section>
 
 	<script type="text/javascript" src="js/JQuery3.3.1.js"></script>
 	<script type="text/javascript">
