--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<li><a href="#about">About</a></li>
 	<li><a href="#projects">Projects</a></li>
 	<li><a href="#skills">skills</a></li>
-	<li><a href="#contact-form">Contact</a></li>
+	<li><a href="#contact-btn">Contact</a></li>
 	<li><a href="res.pdf" data-target="res.pdf">Resume </a></li>
 	</ul>
 	<!--language-->
@@ -207,7 +207,7 @@
 	<h1 class="c-b-heading">Contact Me</h1>
 	<h1 class="c-b-heading"><i class="fa fa-phone" style="font-size:30px"></i> +(330) 891-7764 </h1>
 	<h1 class="c-b-heading"><i class="fa fa-envelope" style="font-size:30px"></i> aksingh01@student.ysu.edu </h1>
-	
+
 
 
 	</section>
