--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 		<!--type----------->
 		<div class="s-type">ext2 Image Scanner </div>
 		<!--name------->
+		 <a href="https://github.com/singhaniket98/OS-TERM-PROJECT">
 		<img src="images/virtual1.png">
 	</div>
 	<!--text----------------->
@@ -105,6 +106,7 @@
 	<!--type----------->
 		<div class="s-type">Intelligent Agent</div>
 		<!--name------->
+		<a href="https://github.com/singhaniket98/NavMeshPathFinding">
 		<img src="images/ai.png">
 	</div>
 	<!--text----------------->
@@ -117,6 +119,7 @@
 	<!--img------------->
 	<div class="s-b-img">
 		<!--type----------->
+		<a href="https://github.com/singhaniket98/MazePathFinding_C-">
 		<div class="s-type">Maze Solver</div>
 		<!--name------->
 		<img src="images/maze.png">
