--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 	<section id="contact-btn">
 	<!--heading-------------->
 	<h1 class="c-b-heading">Contact Me</h1>
-	<h1 class="c-b-heading"><i class="fa fa-phone" style="font-size:30px"></i> +(330) 891-7764 </h1>
-	<h1 class="c-b-heading"><i class="fa fa-envelope" style="font-size:30px"></i> aksingh01@student.ysu.edu </h1>
+	<h1><i class="fa fa-phone" style="font-size:30px"></i> +(330) 891-7764 </h1>
+	<h1><i class="fa fa-envelope" style="font-size:30px"></i> aksingh01@student.ysu.edu </h1>
 
 
 
