--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!--name--->
 	<h1>I'm <font color="#00BFFF">Aniket</font> Singh</h1>
 	<!--details--------------->
-	<p class="details"> <font color="#111111"> Welcome to my webpage. I am a senior at Youngstown State University. I am majoring in Computer Science, with a specialization in Data Analysis. Check out my resume, to know more about my academics. </font> </p>
+	<p class="details"> <font color="#111111"> Welcome to my webpage. I am a senior at Youngstown State University. I am majoring in Computer Science, with a minor in Mathematics and specialization in Data Analysis. Check out my resume, to know more about my academics. </font> </p>
 	<!--cv button-------------------->
 	<!---
 	<a href="#" class="cv-btn">Download CV</a>--->
@@ -66,7 +66,7 @@
 	<h2>Student - Computer Science</h2>
 	<p> I am an international student from Nepal. Currently a senior at Youngstown State University. I will be graduating May 2021. I love to code and solve problems. My area of interest is data analysis, machine learning, and problem solving.</p>
 	<p> I work as a Resident Assistant at Cafaro House, Residence Life. I am also currently the president for International Student Organization. </p>
-	<p> Other than coding, I have several hobbies such as stock trading, photography, weight lifting, and playing guitar. </p>
+	<p> Other than coding, I have several hobbies such as stock/options trading, photography, weight lifting, long-boarding, and I love playing guitar. </p>
 	</div>
 	<!--about-model----------------->
 	<div class="about-model">
