--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<!--name--->
 	<h1>I'm <font color="#00BFFF">Aniket</font> Singh</h1>
 	<!--details--------------->
-	<p class="details"> <font color="#111111"> Welcome to my webpage. I am a senior at Youngstown State University. I am majoring in Computer Science, with a minor in Mathematics and specialization in Data Analysis. Check out my resume, to know more about my academics. </font> </p>
+	<p class="details"> <font color="#111111"> Welcome to my webpage. I am a graduate student at Youngstown State University. I am majoring in Mathematics with specialization in Statistics.  </font> </p>
 	<!--cv button-------------------->
 	<!---
 	<a href="#" class="cv-btn">Download CV</a>--->
@@ -65,8 +65,8 @@
 	<div class="about-text">
 	<h1>About Me</h1>
 	<h2>Student - Computer Science</h2>
-	<p> I am an international student from Nepal. Currently a senior at Youngstown State University. I will be graduating May 2021. I love to code and solve problems. My area of interest is data analysis, machine learning, and problem solving.</p>
-	<p> I work as a Resident Assistant at Cafaro House, Residence Life. I am also currently the president for International Student Organization. </p>
+	<p> I am an international student from Nepal. I recently graduated from Youngstown State University with my Bachelor's of Science in Computer Science. I love to code and solve problems. My area of interest is data analysis, machine learning, and problem solving.</p>
+	<p> I will continue my graduate studies at Youngstown State University. Please review my resume to find out more about my academics. </p>
 	<p> Other than coding, I have several hobbies such as stock/options trading, photography, weight lifting, long-boarding, and I love playing guitar. </p>
 	</div>
 	<!--about-model----------------->
